--- a/helloboot/src/main/resources/templates/hello.html
+++ b/helloboot/src/main/resources/templates/hello.html
@@ -11,5 +11,13 @@
         <input type="text" name="text1" />
         <button type="submit" name="button1">クリック</button>
     </form>
+
+    <br/>
+
+    <form method="post" action="/hello/db">
+        従業員IDを入力：
+        <input type="text" name="text2" th:value="${text2_value}" />
+        <button type="submit">クリック</button>
+    </form>
 </body>
 </html>
