SpringSample : [issue] エラーメッセージのフォーム内表示に修正。 [bugfix] max/minのエラーメッセージ定義がmaxとminで逆だったので修正

--- a/helloboot/src/main/resources/templates/login/signup.html
+++ b/helloboot/src/main/resources/templates/login/signup.html
@@ -2,64 +2,105 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link th:href="@{webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}" rel="stylesheet"></link>
+    <link th:href="@{webjars/bootstrap/3.3.7/css/bootstrap.min.css}" rel="stylesheet"></link>
     <script th:src="@{webjars/jquery/1.11.1/jquery.min.js}"></script>
-    <script th:src="@{webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
+    <script th:src="@{webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
     <title>サインアップ</title>
 </head>
 <body>
 
-    <h1>ユーザ登録画面</h1>
+<div class="col-sm-5">
+    <div class="page-header">
+        <h1>ユーザ登録画面</h1>
+    </div>
 
     <form method="post" action="/signup" th:object="${signupForm}">
 
-        <ul>
-            <li th:each="error: ${#fields.detailedErrors()}">
-                <span style="color:#ff0000;" th:text="${error.message}">Error message</span>
-            </li>
-        </ul>
+        <table class="table table-bordered table-hover">
+            <tr>
+                <th class="active col-sm-3">ユーザID</th>
+                <td>
+                    <div class="form-group" th:classappend="${#fields.hasErrors('userId')} ? 'has-error'">
+                        <input type="text" class="form-control" th:field="*{userId}"/>
 
-        <!-- TODO: サインアップフォーム(Model関連付け)  -->
-        <table>
-            <tr>
-                <th>ユーザID</th>
-                <th>
-                    <input type="text" name="user_id" th:field="*{userId}"/>
-                </th>
+                        <span class="text-danger" th:if="${#fields.hasErrors('userId')}" th:errors="*{userId}">
+                            userId error
+                        </span>
+                    </div>
+                </td>
             </tr>
+
             <tr>
-                <th>パスワード</th>
-                <th>
-                    <input type="password" name="password" th:field="*{password}" />
-                </th>
+                <th class="active">パスワード</th>
+                <td>
+                    <div class="form-group" th:classappend="${#fields.hasErrors('password')} ? 'has-error'">
+                        <input type="password" name="password" th:field="*{password}" />
+
+                        <span class="text-danger" th:if="${#fields.hasErrors('password')}"th:errors="*{password}">
+                            password error
+                        </span>
+                    </div>
+                </td>
             </tr>
+
             <tr>
-                <th>ユーザ名</th>
-                <th>
-                    <input type="text" name="user_name" th:field="*{userName}"/>
-                </th>
+                <th class="active">ユーザ名</th>
+                <td>
+                    <div class="form-group" th:classappend="${#fields.hasErrors('userName')} ? 'has-error'">
+                        <input type="text" name="user_name" th:field="*{userName}"/>
+
+                        <span class="text-danger" th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}">
+                            userName error
+                        </span>
+                    </div>
+                </td>
             </tr>
+
             <tr>
-                <th>誕生日</th>
-                <th>
-                    <input type="text" name="birthdate" placeholder="yyyy/MM/dd" th:field="*{birthdate}"/>
-                </th>
+                <th class="active">誕生日</th>
+                <td>
+                    <div class="form-group" th:classappend="${#fields.hasErrors('birthdate')} ? 'has-error'">
+                        <input type="text" name="birthdate" placeholder="yyyy/MM/dd" th:field="*{birthdate}"/>
+
+                        <span class="text-danger" th:if="${#fields.hasErrors('birthdate')}" th:errors="*{birthdate}">
+                            birthdate error
+                        </span>
+                    </div>
+                </td>
             </tr>
+
             <tr>
-                <th>年齢</th>
-                <th>
-                    <input type="number" name="age"  th:field="*{age}"/>
-                </th>
+                <th class="active">年齢</th>
+                <td>
+                    <div class="form-group" th:classappend="${#fields.hasErrors('age')} ? 'has-error'">
+                        <input type="number" name="age"  th:field="*{age}"/>
+                        <span class="text-danger" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">
+                            age error
+                        </span>
+                    </div>
+                </td>
             </tr>
+
             <tr>
-                <th>結婚</th>
-                <th>
-                    <input type="radio" name="marriged"  value="false" th:field="*{marriage}">既婚</input>
-                    <input type="radio" name="marriged"  value="true" th:field="*{marriage}">未婚</input>
-                </th>
+                <th class="active">結婚</th>
+                <td>
+                    <div class="form-group" th:classappend="${#fields.hasErrors('marriage')} ? 'has-error'">
+                        <div>
+                            <input type="radio" name="marriged"  value="false" th:field="*{marriage}">既婚</input>
+                            <input type="radio" name="marriged"  value="true" th:field="*{marriage}">未婚</input>
+                        </div>
+                        <span class="text-danger" th:if="${#fields.hasErrors('age')}" th:errors="*{marriage}">
+                            marriage error
+                        </span>
+                    </div>
+                </td>
             </tr>
         </table>
+
         <button class="btn btn-primary" type="submit">ユーザ登録</button>
+
+
     </form>
+</div>
 </body>
 </html>
