--- a/hellothymeleaf/src/main/resources/templates/hello.html
+++ b/hellothymeleaf/src/main/resources/templates/hello.html
@@ -6,5 +6,11 @@
 </head>
 <body>
     <h2>hello</h2>
+    <div>
+        <div>message:</div>
+        <div th:text="${message}"></div>
+    </div>
+
+    <p><a th:href="@{'/'}">インデックスページへ戻る</a></p>
 </body>
 </html>
